Wed Sep 11 16:49:26 2002  Akinori MUSHA  <knu@iDaemons.org>

	* lib/open3.rb: Merge from 1.7: Turn sync on for the writer
	  handle.

	* lib/ping.rb: Merge from 1.7: Fix a typo.

Wed Sep 11 16:24:22 2002  Akinori MUSHA  <knu@iDaemons.org>

	* lib/thread.rb: Merge from 1.7: Get rid of race condition in
	  Queue#pop().

	* lib/thread.rb: Merge from 1.7: SizedQueue: new(max) should not
	  accept a value <= 0.

	* lib/thread.rb: Merge from 1.7: SizedQueue: Properly override
	  enq(), shift() and deq().

Wed Sep 11 16:15:06 2002  Akinori MUSHA  <knu@iDaemons.org>

	* lib/tempfile.rb: Merge from 1.7: Add Tempfile#size.

Mon Sep  9 23:43:33 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* win32/win32.h (S_I?USR): define only if not mingw32.

Mon Sep  9 20:41:03 2002  NAKAMURA Usaku <usa@ruby-lang.org>

	* win32/win32.c (do_spawn): fix the bug which the environment variables
	  had not spread.

Sun Sep  8 19:21:48 2002  NAKAMURA Usaku <usa@ruby-lang.org>

	* dir.c (rb_glob): add prototype of 2nd argument to avoid VC++ warning.

	* dir.c (push_pattern): add const directive to 1st argument.

	* dir.c: prototype; push_pattern() to avoid VC++ warning.

	* ext/tcltklib/tcltklib.c: prototype; _timer_for_tcl() and ip_ruby()
	  to avoid VC++ warning.

	* win32/win32.c (win32_stat): remove S_IWGRP and S_IWOTH bits from
	  st_mode.

	* win32/win32.h (S_I*): define if not defined.

Sat Sep  7 23:32:56 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* misc/inf-ruby.el (inferior-ruby-error-regexp-alist): regexp
	  alist for error message from ruby.

	* misc/inf-ruby.el (inferior-ruby-mode): fixed for Emacs.

	* misc/inf-ruby.el (ruby-send-region): compilation-parse-errors
	  doesn't parse first line, so insert separators before each
	  evaluations.

Sat Sep  7 08:44:27 2002  Minero Aoki  <aamine@loveruby.net>

	* parse.y (rb_gc_mark_parser): ruby_eval_tree is marked in eval.c.

Fri Sep  6 12:01:18 2002  Minero Aoki  <aamine@loveruby.net>
