@@ -1,3 +1,8 @@
+Thu Sep 12 00:09:32 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>
+
+	* eval.c (rb_trap_eval): preserve thread status and so on.
+	  [ruby-talk:40337], [ruby-core:00019]
+
 Wed Sep 11 16:49:26 2002  Akinori MUSHA  <knu@iDaemons.org>
 
 	* lib/open3.rb: Merge from 1.7: Turn sync on for the writer
